fix(main menu): Improve overflow behavior for main menu.

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .menu {
